working to try to small fix the navbar background color on ios

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -136,6 +136,18 @@
     }
 }
 
+@supports (-webkit-touch-callout: none) {
+    .nav-indicator {
+      opacity: 0.2; /* Adjust this value as needed */
+      background: linear-gradient(
+        90deg, 
+        rgba(250, 250, 250, 0.05) 0%, 
+        rgba(250, 250, 250, 0.1) 50%, /* Lighter middle section */
+        rgba(250, 250, 250, 0.05) 100%
+      );
+    }
+  }
+
 
 @media only screen and (max-width: 27rem) {
     .btn {
